# framework-palace

./: .env.example  .gitignore  README.md  agent_git.md  canonico.md  modules.md  palace_roadmap.md  pendientes.md  prompt_5data.md  pyproject.toml  requirements-dev.txt  terminado.md
docs/: MIGRATION_GUIDE.md
scripts/: README-desinstalacion.md  README.md  desinstalar-palace.bat  desinstalar-todo.bat  instalar-palace.bat  limpiar-proyecto-rapido.bat  limpiar-proyecto.bat
src/palace/: __init__.py  __main__.py  py.typed
src/palace/agents/: backend.py  base.py  dba.py  designer.py  devops.py  frontend.py  infra.py  orchestrator.py  qa.py  reviewer.py
src/palace/api/: __init__.py  main.py
src/palace/cli/: __init__.py  main.py
src/palace/context/: __init__.py  builder.py  initializer.py  loader.py  manager.py  retriever.py  session.py  types.py
src/palace/core/: __init__.py  base.py  config.py  costs.py  exceptions.py  framework.py  logging_config.py  memory_quality.py  orchestrator.py  resilience.py  types.py
src/palace/llm/: __init__.py  base.py  client.py  costs.py  models.py  router.py
src/palace/llm/providers/: __init__.py  ollama.py
src/palace/memory/: __init__.py  base.py  stores.py  vector_store.py
src/palace/models/: __init__.py  domain_types.py
src/palace/pipelines/: __init__.py  base.py  code_review.py  database_migration.py  deployment.py  documentation.py  executor.py  feature_development.py  refactoring.py  types.py
src/palace/tools/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_core_types.py  test_costs.py  test_exceptions.py  test_framework.py  test_llm_client.py  test_llm_models.py  test_llm_router.py  test_logging_config.py  test_memory_base.py  test_memory_quality.py  test_resilience.py  test_vector_store.py
tests/agents/: __init__.py  test_base.py  test_orchestrator.py
tests/context/: test_builder.py  test_context_types.py  test_loader.py  test_retriever.py  test_session.py
tests/integration/: __init__.py  test_context_pipeline.py  test_memory_pipeline.py
tests/pipelines/: test_executor.py  test_pipeline_base.py  test_pipeline_types.py
